--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <div class="nav-item dropdown dropright">
                         <a style="color: black;" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contactanos</a>
                         <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                            <p class="dropdown-item"><i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York, USA</p>
-                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
-                            <p class="dropdown-item"><i class="fa fa-phone-alt text-primary mr-3"></i>+52 2212690224</p>
+                            <p class="dropdown-item"><i class="fa fa-map-marker-alt text-primary mr-3"></i> C. 10 Nte., El Dulce Nombre, 41105 Chilapa de Álvarez, Gro.</p>
+                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i></p>
+                            <p class="dropdown-item"><i class="fa fa-phone-alt text-primary mr-3"></i>+52 221 269 0224</p>
                         </div>
                     </div>
                     
@@ -99,7 +99,7 @@
             <div class="col-lg-4 col-6 text-left">
                 <form action="">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for products">
+                        <input type="text" class="form-control" placeholder="Buscar Productos">
                         <div class="input-group-append">
                             <span class="input-group-text bg-transparent text-primary">
                                 <i class="fa fa-search"></i>
@@ -140,24 +140,32 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Belleza<i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                                 <a href="" class="dropdown-item">Labiales</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
+                                <a href="" class="dropdown-item">Mascarilla Pulidora, hidratante y de más.</a>
+                                <a href="" class="dropdown-item">Exfloliantes</a>
+                                <a href="" class="dropdown-item">Agua micelar</a>
+                                <a href="" class="dropdown-item">Delineadores</a>
+                               
                             </div>
                         </div>
                         <div class="nav-item dropdown dropright">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Cuidado personal<i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                                <a href="" class="dropdown-item">Men's Dresses</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
+                                <a href="" class="dropdown-item">Jabones en barra</a>
+                                <a href="" class="dropdown-item">Jabones coorporales</a>
+                                <a href="" class="dropdown-item">Shampoohs</a>
+                                <a href="" class="dropdown-item">Cepillos dentales</a>
+                                 <a href="" class="dropdown-item">Desodorantes</a>
+                                <a href="" class="dropdown-item">Cremas</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown dropright">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Cuidado del hogar<i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
-                                <a href="" class="dropdown-item">Men's Dresses</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
+                                <a href="" class="dropdown-item"> Detergente en polvo</a>
+                                <a href="" class="dropdown-item">Detergente en liquido para ropa</a>
+                                <a href="" class="dropdown-item">Limpiador multiusos</a>
+                                 <a href="" class="dropdown-item">Liquido lavaplatos</a>
+                                <a href="" class="dropdown-item">Fibras</a>
                             </div>
                         </div>
                         <!-- <a href="" class="nav-item nav-link">Shirts</a>
@@ -175,8 +183,8 @@
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
-                        <span class="h1 text-uppercase text-dark bg-light px-2">ABI</span>
-                        <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">GUEL</span>
+                        <span class="h1 text-uppercase text-dark bg-light px-2">EN</span>
+                        <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">PER</span>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -247,7 +255,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Doble X</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Vitaminas, minerales y fitonutrientes para ayudar a reforzar la salud del corazón, cerebro, ojos, piel, huesos y sistema inmunológico.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -257,7 +265,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">C Plus</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Estimula la síntesis de colágeno fortaleciendo el soporte estructural y la elasticidad de la piel, es un importante catalizador de todos los procesos metabólicos en que interviene el calcio, como la contracción muscular, mejorando el tono muscular.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -267,7 +275,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">HSN</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Es una vitamina esencial soluble en agua, Sin biotina ciertas enzimas no funcionan adecuadamente y pueden ocurrir ciertas complicaciones con la piel y la fragilidad del cabello y las uñas.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -277,7 +285,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Ajo Concentrado</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Es antibacteriano, por lo que ayuda a combatir diversas infecciones. Fortalece el sistema inmunológico gracias a sus propiedades antioxidantes, antibacterianas y antivirales.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -287,7 +295,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Limpieza Bucal</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">La higiene oral implica prácticas que ayudan a mantener la boca limpia y libre de enfermedades, como cepillarse los dientes, usar hilo dental y visitar al dentista con regularidad.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -297,7 +305,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Detergentes</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Un detergente eco debe ser biodegradable, no contener fosfatos y elaborarse con sustancias como aceites vegetales </p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -307,7 +315,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">LOC</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Efectivo limpiador de superficies, libre de cloro y ácidos abrasivos, que deja tu hogar poderosamente limpio y con un fresco aroma.</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
@@ -317,7 +325,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">SA8</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">El SA8 Detergente Líquido Concentrado para Ropa ha demostrado ser seguro para el medio ambiente y es reconocido por el Programa Safer Choice de la Agencia de Protección Ambiental de los Estados Unidos</p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Comprar ahora</a>
                                 </div>
                             </div>
