--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                         <a style="color: black;" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contactanos</a>
                         <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                             <p class="dropdown-item"><i class="fa fa-map-marker-alt text-primary mr-3"></i> C. 10 Nte., El Dulce Nombre, 41105 Chilapa de Álvarez, Gro.</p>
-                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i></p>
+                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i>enper@gmail.com</p>
                             <p class="dropdown-item"><i class="fa fa-phone-alt text-primary mr-3"></i>+52 221 269 0224</p>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Belleza<i class="fa fa-angle-right float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                                 <a href="" class="dropdown-item">Labiales</a>
-                                <a href="" class="dropdown-item">Mascarilla Pulidora, hidratante y de más.</a>
+                                <a href="" class="dropdown-item">Mascarilla Pulidora</a>
                                 <a href="" class="dropdown-item">Exfloliantes</a>
                                 <a href="" class="dropdown-item">Agua micelar</a>
                                 <a href="" class="dropdown-item">Delineadores</a>
@@ -224,7 +224,7 @@
     <!-- Navbar End -->
 
 
-    <!-- Breadcrumb Start -->
+    <!-- Breadcrumb Start 
     <div class="container-fluid">
         <div class="row px-xl-5">
             <div class="col-12">
@@ -235,7 +235,7 @@
             </div>
         </div>
     </div>
-    <!-- Breadcrumb End -->
+  Breadcrumb End -->
 
 
     <!-- Contact Start -->
