--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <link href="BarraSuperior.html" rel="import" />
     <!-- inicio de la barra superior -->
     <div class="container-fluid">
         <div class="row bg-secondary py-1 px-xl-5">
@@ -34,10 +35,10 @@
                 <div class="d-inline-flex align-items-center h-100">
                     <a style="color: black;" class="nav-link dropdown-toggle" href="">Acerca de nosotros</a>
                     <div class="nav-item dropdown dropright">
-                        <a style="color: black;" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contactanos</a>
+                        <a style="color: rgb(0, 0, 0);" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contactanos</a>
                         <div class="dropdown-menu position-absolute rounded-0 border-0 m-0">
                             <p class="dropdown-item"><i class="fa fa-map-marker-alt text-primary mr-3"></i> C. 10 Nte., El Dulce Nombre, 41105 Chilapa de Álvarez, Gro.</p>
-                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i></p>
+                            <p class="dropdown-item"><i class="fa fa-envelope text-primary mr-3"></i>enper@gmail.com</p>
                             <p class="dropdown-item"><i class="fa fa-phone-alt text-primary mr-3"></i>+52 221 269 0224</p>
                         </div>
                     </div>
